--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "crypto-list",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node server.js",
     "build": "vue-cli-service build",
